--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -42,51 +42,28 @@ BuildRoot:     %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 BuildRequires: zlib-devel libpng-devel libjpeg-devel expat-devel
 BuildRequires: /bin/ksh bison m4 flex swig tk tcl >= 8.3 freetype-devel >= 2
 
-#-- Red Hat Linux specific Build Requirements -------------------------------
-
-%if 0%{?rhl}
-# ***NB***
-#
-#  This spec file no longer works for redhat[789].   The rpmbuild
-#  on those systems is just too old and broken!
-#
-%define TCL 1
-BuildRequires: XFree86-devel
-# This just indicates the requirement for tcl.h, tk.h, but doesn't identify
-# where to get them from. In RH9 and earlier they were in the tcl, tk,
-# base packages which are always BR'd anyway (above).
-BuildRequires:  /usr/include/tcl.h /usr/include/tk.h
-%endif
-
-#-- Red Hat Enterprise Linux specific Build Requirements --------------------
+#-- Red Hat Enterprise Linux (also Centos) specific Build Requirements --------------------
 %if 0%{?rhel}
-%define TCL 1
-%if %rhel < 4
-BuildRequires:  XFree86-devel
-# This just indicates the requirement for tcl.h, tk.h, but doesn't identify
-# where to get them from. In RH9 and earlier they were in the tcl, tk,
-# base packages which are always BR'd anyway (above).
-BuildRequires:  /usr/include/tcl.h /usr/include/tk.h
-%endif
-%if %rhel >= 3
-%define IPSEPCOLA 1
-BuildRequires: fontconfig-devel tcl-devel tk-devel 
-%endif
-%if %rhel == 4
-BuildRequires: xorg-x11-devel
-%endif
 %if %rhel >= 4
-# PERL is available earlier, but a suitable SWIG isn't
+BuildRequires: fontconfig-devel xorg-x11-devel
+%define TCL 1
+BuildRequires: tcl-devel tk-devel 
 %define PERL 1
+BuildRequires: perl perl-ExtUtils-Embed
 %define RUBY 1
+BuildRequires: ruby ruby-devel
 %define GUILE 1
+BuildRequires: guile-devel
 %define PYTHON 1
-BuildRequires: perl perl-ExtUtils-Embed ruby ruby-devel guile-devel python python-devel
+BuildRequires: python python-devel
+%define IPSEPCOLA 1
 %endif
 %if %rhel >= 5
+BuildRequires: libtool-ltdl libtool-ltdl-devel
+BuildRequires: libXaw-devel libSM-devel libICE-devel libXpm-devel libXt-devel libXmu-devel libXext-devel libX11-devel
 %define JAVA 1
+BuildRequires: java-devel
 %define PANGOCAIRO 1
-BuildRequires: libtool-ltdl libtool-ltdl-devel libXaw-devel libSM-devel libICE-devel libXpm-devel libXt-devel libXmu-devel libXext-devel libX11-devel java-devel
 BuildRequires: cairo-devel >= 1.1.10 pango-devel gmp-devel gtk2-devel
 %define RSVG 1
 BuildRequires: librsvg2-devel
@@ -96,198 +73,66 @@ BuildRequires: gts-devel
 BuildRequires: libglade2-devel gtkglarea2-devel gtkglext-devel freeglut-devel
 %endif
 %if %rhel >= 6
+%define PERL 1
+BuildRequires: perl-devel perl-libs
 %define PHP 1
 BuildRequires: php-devel
 %define MYLIBGD 0
 BuildRequires: gd gd-devel
 %define GDK_PIXBUF 1
-%define PERL 1
-BuildRequires: perl-devel perl-libs
-%endif
-%endif
-
-#-- AT&T-internal Red Hat Enterprise Linux specific Build Requirements --------------------
-%if 0%{?att_rhel}
-%define TCL 1
-%if %att_rhel < 4
-BuildRequires:  XFree86-devel
-# This just indicates the requirement for tcl.h, tk.h, but doesn't identify
-# where to get them from. In RH9 and earlier they were in the tcl, tk,
-# base packages which are always BR'd anyway (above).
-BuildRequires:  /usr/include/tcl.h /usr/include/tk.h
-%endif
-%if %att_rhel >= 3
-%define IPSEPCOLA 1
-%define SFDP 1
-BuildRequires: fontconfig-devel tcl-devel tk-devel 
-%endif
-%if %att_rhel == 4
-BuildRequires: xorg-x11-devel
-%endif
-%if %att_rhel >= 4
-# PERL is available earlier, but a suitable SWIG isn't
-%define PERL 1
-%define RUBY 1
-%define GUILE 1
-%define PYTHON 1
-BuildRequires: perl perl-ExtUtils-Embed ruby ruby-devel guile-devel python python-devel
-%endif
-%if %att_rhel >= 5
-%define JAVA 1
-BuildRequires: libtool-ltdl libtool-ltdl-devel libXaw-devel libSM-devel libICE-devel libXpm-devel libXt-devel libXmu-devel libXext-devel libX11-devel java-devel
-%define PANGOCAIRO 1
-BuildRequires: cairo-devel >= 1.1.10 pango-devel gmp-devel gtk2-devel
-%define RSVG 1
-BuildRequires: librsvg2-devel
-%endif
-%if %att_rhel >= 6
-%define PHP 1
-BuildRequires: php-devel
-%define PERL 1
-BuildRequires: perl-devel perl-libs
-%define GDK_PIXBUF 1
-%define MYLIBGD 0
-BuildRequires: gd gd-devel
-%define SMYRNA 1
-BuildRequires: gtkglarea2-devel gtkglext-devel glade3-libgladeui-devel
-BuildRequires: libglade2-devel freeglut-devel gts-devel
 %endif
 %endif
 
 #-- Fedora specific Build Requirements --------------------------------------
 %if 0%{?fedora}
-%define PERL 1
+%if %fedora >= 9
+BuildRequires: libXaw-devel libSM-devel libICE-devel libXpm-devel libXt-devel libXmu-devel libXext-devel libX11-devel
+BuildRequires: fontconfig-devel
+BuildRequires: libtool-ltdl libtool-ltdl-devel
 %define TCL 1
-BuildRequires: fontconfig-devel tcl-devel tk-devel 
-%if %fedora < 3
-BuildRequires: XFree86-devel
-%endif
-%if %fedora == 3
-BuildRequires: xorg-x11-devel
-%endif
-%if %fedora == 4
-BuildRequires: xorg-x11-devel
-%endif
-%if %fedora >= 3
-%define IPSEPCOLA 1
-%endif
-%if %fedora >= 4
-%define RUBY 1
-%define GUILE 1
-%define PYTHON 1
-BuildRequires: libtool-ltdl libtool-ltdl-devel ruby ruby-devel guile-devel python python-devel
-%endif
-%if %fedora < 5
-Requires graphviz-gd
-%endif
-%if %fedora >= 5
-%define PHP 1
-%define JAVA 1
-BuildRequires: libXaw-devel libSM-devel libICE-devel libXpm-devel libXt-devel libXmu-devel libXext-devel libX11-devel java-devel php-devel
-%ifnarch ppc64
-%define SHARP 1
-%define OCAML 1
-BuildRequires: mono-core ocaml
-%endif
-%endif
-%if %fedora >= 6
-%define LUA 1
-%define PANGOCAIRO 1
-%define RSVG 1
-BuildRequires: cairo-devel >= 1.1.10 pango-devel gmp-devel lua-devel gtk2-devel
-BuildRequires: librsvg2-devel
-%endif
-%if %fedora >= 7
+BuildRequires: tcl-devel tk-devel 
 %define PERL 1
 BuildRequires: perl-devel
+%define RUBY 1
+BuildRequires: ruby ruby-devel
+%define GUILE 1
+BuildRequires: guile-devel
+%define PYTHON 1
+BuildRequires: python python-devel
+%define JAVA 1
+BuildRequires: java-devel
+%define PHP 1
+BuildRequires: php-devel
+%ifnarch ppc64
+%define SHARP 1
+BuildRequires: mono-core
+%define OCAML 1
+BuildRequires: ocaml
+%endif
+%define LUA 1
+BuildRequires: lua-devel
+%define PANGOCAIRO 1
+BuildRequires: cairo-devel >= 1.1.10 pango-devel gmp-devel gtk2-devel
+%define RSVG 1
+BuildRequires: librsvg2-devel
 %define MYLIBGD 0
 BuildRequires: gd gd-devel
 %define DEVIL 1
 BuildRequires: DevIL-devel
-%define GDK_PIXBUF 1
 %define SFDP 1
 BuildRequires: gts-devel
 %define LASI 1
 BuildRequires: lasi-devel
-%endif
-%if %fedora >= 8
+%define GDK_PIXBUF 1
+%define IPSEPCOLA 1
 %define R_LANG 1
 BuildRequires: R-devel swig >= 1.3.33 perl-libs
 %define SMYRNA 1
 BuildRequires: libglade2-devel gtkglarea2-devel gtkglext-devel glade3-libgladeui-devel freeglut-devel
 #define GLITZ 1
 # BuildRequires: glitz-devel
-%endif
-%if %fedora >= 9
-BuildRequires: ghostscript-devel
 %define GHOSTSCRIPT 1
-#define MING 1
-#BuildRequires: ming ming-devel
-%endif
-%endif
-
-#-- AT&T-internal Fedora specific Build Requirements --------------------------------------
-%if 0%{?att_fedora}
-%define PERL 1
-%define TCL 1
-BuildRequires: fontconfig-devel tcl-devel tk-devel 
-%if %att_fedora < 3
-BuildRequires: XFree86-devel
-%endif
-%if %att_fedora == 3
-BuildRequires: xorg-x11-devel
-%endif
-%if %att_fedora == 4
-BuildRequires: xorg-x11-devel
-%endif
-%if %att_fedora >= 3
-%define IPSEPCOLA 1
-%endif
-%if %att_fedora >= 4
-%define RUBY 1
-%define GUILE 1
-%define PYTHON 1
-BuildRequires: libtool-ltdl libtool-ltdl-devel ruby ruby-devel guile-devel python python-devel
-%endif
-%if %att_fedora < 5
-Requires graphviz-gd
-%endif
-%if %att_fedora >= 5
-%define PHP 1
-%define JAVA 1
-BuildRequires: libXaw-devel libSM-devel libICE-devel libXpm-devel libXt-devel libXmu-devel libXext-devel libX11-devel java-devel php-devel
-%ifnarch ppc64
-%define SHARP 1
-%define OCAML 1
-BuildRequires: mono-core ocaml
-%endif
-%endif
-%if %att_fedora >= 6
-%define LUA 1
-%define PANGOCAIRO 1
-%define RSVG 1
-BuildRequires: cairo-devel >= 1.1.10 pango-devel gmp-devel lua-devel gtk2-devel
-BuildRequires: librsvg2-devel
-%endif
-%if %att_fedora >= 7
-%define DEVIL 1
-%define GDK_PIXBUF 1
-%define SFDP 1
-%define LASI 1
-BuildRequires: gd gd-devel perl-devel DevIL-devel lasi-devel
-%endif
-%if %att_fedora >= 8
-%define R_LANG 1
-BuildRequires: R-devel swig >= 1.3.33 perl-libs
-%define SMYRNA 1
-BuildRequires: libglade2-devel gtkglarea2-devel gtkglext-devel glade3-libgladeui-devel
-BuildRequires: freeglut-devel gts-devel
-#define GLITZ 1
-# BuildRequires: glitz-devel
-%endif
-%if %att_fedora >= 9
 BuildRequires: ghostscript-devel
-%define GHOSTSCRIPT 1
 #define MING 1
 #BuildRequires: ming ming-devel
 %endif
