--- a/.hgignore
+++ b/.hgignore
@@ -251,3 +251,6 @@ windows/build/graphviz.wxs
 *.VC.db
 *.VC.opendb
 *.vcxproj.user
+
+# Do not ignore Windows MSI setup.exe untill a new MSI can be generated.
+!windows/graphviz-msi/setup/Release/setup.exe
